--- a/style.css
+++ b/style.css
@@ -109,6 +109,42 @@ body{
   font-weight: 300;
 }
 
+.contactInfo.education li{
+  margin-bottom: 15px;
+}
+
+.contactInfo.education h5{
+  color: #03a9f4;
+  font-weight: 500;
+}
+
+.contactInfo.education h4:nth-child(2){
+  color: #fff;
+  font-weight: 500;
+}
+
+.contactInfo.education h4{
+  color: #fff;
+  font-weight: 300;
+}
+
+.contactInfo.language .percent{
+  position: relative;
+  width: 100%;
+  height: 5px;
+  background-color: #081921;
+  display: block;
+  margin-top: 5px;
+}
+
+.contactInfo.language .percent div{
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  background: #03a9f4;
+}
+
 .container .right_Side{
   position: relative;
   background: #fff;
