--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,18 @@ body{
   font-weight: 300;
 }
 
+.contactInfo.education h4 a{
+  color: #fff;
+  font-weight: 500;
+  text-decoration: none;
+}
+
+.contactInfo.education h4 a:active{
+  color: #fff;
+  font-weight: 500;
+  text-decoration: none;
+}
+
 .contactInfo.language .percent{
   position: relative;
   width: 100%;
